--- a/index.html
+++ b/index.html
@@ -7,5 +7,10 @@
 </head>
 <body>
     <h1>Hello World</h1>
+    <style>
+        h1 {
+            color: green;
+        }
+    </style>
 </body>
 </html>
